[package]
name = "steam_gid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.26", features = ["macros"] }
dialoguer = "0.10"
lazy-regex = "2.5"
futures-util = "0.3"
roxmltree = "0.18"
log = "0.4"
anyhow = "1.0"
simplelog = "0.12"
thiserror = "1.0"
actix-web = { version = "4.2", default-features = false, features = ["macros", "rustls"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
